2007-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_citingcat_id_age)
	(igraph_measure_dynamics_citedcat_id_age) : standard deviation
	calculation corrected

2007-03-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/measure_dynamics.c (igraph_measure_dynamics_citingcat_id_age) : 
	bug corrected

2007-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-pajek-lexer.l : modified to read file with MacOS 
	'end of line' characters correctly

2007-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/adjlist.c (igraph_i_lazy_adjlist_init)
	(igraph_i_lazy_adjlist_destroy, igraph_i_lazy_adjlist_get_real) :
	added IGRAPH_I_SORT_SIMPLIFY type of lazy adjlist, this sorts 
	and simplifies the adjacency vectors
	
	* src/structural_properties.c (igraph_transitivity_local_undirected)
	(igraph_transitivity_local_undirected1)
	(igraph_transitivity_local_undirected2)
	(igraph_transitivity_local_undirected4) : local transitivity 
	calculation reorganized
	* examples/simple/igraph_local_transitivity.c : added, but not part
	of the test cases yet

2007-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_transitivity_local_undirected) :
	rewritten to use lazy adjacency lists

	* src/adjlist.c (igraph_i_lazy_adjlist_get_real) : error handling
	rewritten to eliminate compiler warnings

2007-02-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : removed some operator
	implementations from the low-level interface
	* interfaces/python/package/__init__.py : added addition, subtraction,
	multiplication operators with the usual semantics

2007-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c
	(igraph_transitivity_avglocal_undirected)
	(igraph_transitivity_local_undirected)
	(igraph_transitivity_undirected) : corrected overflow bug

2007-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector_ptr.c (igraph_vector_ptr_remove) : replaced
	memcpy with memmove
