@@ -1441,7 +1441,6 @@ int igraph_measure_dynamics_citingcat_id_age(const igraph_t *graph,
   long int i,j,k;
   
   igraph_bool_t lsd=(sd != 0);
-  int signidx=0;
   
   binwidth=no_of_nodes/agebins+1;
   
@@ -2070,4 +2069,201 @@ int igraph_measure_dynamics_d_d_st(const igraph_t *graph,        /* input */
 /*   } */
 /*   return 0; */
 /* } */
+
+int igraph_measure_dynamics_lastcit(const igraph_t *graph, igraph_vector_t *al,
+				    igraph_vector_t *sd, const igraph_vector_t *st,
+				    igraph_integer_t pagebins) {
+
+  long int no_of_nodes=igraph_vcount(graph);
+
+  /* there will be 'agebins' categories, plus one for vertices without a 
+     citation.
+  */
+  long int agebins=pagebins;
+  long int binwidth=no_of_nodes/agebins+1;
+
+  igraph_vector_t ntl, ch, notnull, normfact;
+
+  /* lastcit[n] is the time step+1 in which n was cited, if not 0;
+     if 0, that means that n was never cited
+   */
+  long int *lastcit;
+
+  long int node, i, k;
+
+  igraph_vector_t neis;
+  
+  long int edges=0;
+  
+  lastcit=Calloc(no_of_nodes, long int);
+  if (!lastcit) {
+    IGRAPH_ERROR("Cannot measure dynamics (lastcit)", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, lastcit);
+
+  IGRAPH_VECTOR_INIT_FINALLY(&ntl, agebins+1);
+  IGRAPH_VECTOR_INIT_FINALLY(&ch, agebins+1);
+  IGRAPH_VECTOR_INIT_FINALLY(&notnull, agebins+1);
+  IGRAPH_VECTOR_INIT_FINALLY(&normfact, agebins+1);
+
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  
+  IGRAPH_CHECK(igraph_vector_resize(al, agebins+1));
+  igraph_vector_null(al);
+  if (sd) {
+    IGRAPH_CHECK(igraph_vector_resize(sd, agebins+1));
+    igraph_vector_null(sd);
+  }
+  
+  for (node=0; node<no_of_nodes; node++) {
+
+    IGRAPH_ALLOW_INTERRUPTION();
+
+    /* update A(.) */
+    igraph_neighbors(graph, &neis, node, IGRAPH_OUT);
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=lastcit[to]!=0 ? (node-lastcit[to]+1)/binwidth : agebins;
+      
+      double xk=VECTOR(*st)[node]/VECTOR(ntl)[xidx];
+      double oldm=VECTOR(*al)[xidx];
+
+      VECTOR(notnull)[xidx] += 1;
+      VECTOR(*al)[xidx] += (xk-oldm)/VECTOR(notnull)[xidx];
+      if (sd) {
+	VECTOR(*sd)[xidx] += (xk-oldm)*(xk-VECTOR(*al)[xidx]);
+      }
+    }
+
+    /* Update ntk, ch, normfact */
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=lastcit[to]!=0 ? (node-lastcit[to]+1)/binwidth : agebins;
+
+      lastcit[to]=node+1;
+      VECTOR(ntl)[xidx]--;
+      if (VECTOR(ntl)[xidx]==0) {
+	VECTOR(normfact)[xidx] += (edges-VECTOR(ch)[xidx]+1);
+	VECTOR(ch)[xidx]=edges;
+      }
+      VECTOR(ntl)[0]++;
+      if (VECTOR(ntl)[0]==1) {
+	VECTOR(ch)[0]=edges;
+      }
+      edges++;
+    }    
+
+    /* the new node */
+    VECTOR(ntl)[agebins]++;
+    if (VECTOR(ntl)[agebins]==1) {
+      VECTOR(ch)[agebins]=edges;
+    }
     
+    /* should we move some citations to an older bin? */
+    for (k=1; node-binwidth*k+1 >= 1; k++) {
+      long int shnode=node-binwidth*k;
+      igraph_neighbors(graph, &neis, shnode, IGRAPH_OUT);
+      for (i=0; i<igraph_vector_size(&neis); i++) {
+	long int cnode=VECTOR(neis)[i];
+	if (lastcit[cnode]==shnode+1) {
+	  /* the last citation to cnode was made by shnode, move to other bin*/
+	  VECTOR(ntl)[k-1]--;
+	  if (VECTOR(ntl)[k-1]==0) {
+	    VECTOR(normfact)[k-1] += (edges-VECTOR(ch)[k-1]+1);
+	    VECTOR(ch)[k-1] = edges;
+	  }
+	  VECTOR(ntl)[k]++;
+	  if (VECTOR(ntl)[k]==1) {
+	    VECTOR(ch)[k]=edges;
+	  }
+	}
+      }
+    }
+    
+  }
+
+  /* measurement done, update change */
+  for (i=0; i<agebins+1; i++) {
+    igraph_real_t oldmean;
+    if (VECTOR(ntl)[i] != 0) {
+      VECTOR(normfact)[i] += (edges-VECTOR(ch)[i]+1);
+    }
+    oldmean=VECTOR(*al)[i];
+    VECTOR(*al)[i] *= VECTOR(notnull)[i]/VECTOR(normfact)[i];
+    if (sd) {
+      VECTOR(*sd)[i] += oldmean * oldmean * VECTOR(notnull)[i] *
+	(1-VECTOR(notnull)[i]/VECTOR(normfact)[i]);
+      if (VECTOR(normfact)[i] > 0) {
+	VECTOR(*sd)[i] = sqrt(VECTOR(*sd)[i]/(VECTOR(normfact)[i]-1));
+      }
+    }
+  }  
+ 
+  igraph_vector_destroy(&ntl);
+  igraph_vector_destroy(&ch);
+  igraph_vector_destroy(&notnull);
+  igraph_vector_destroy(&normfact);
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(6);
+  return 0;
+}
+
+int igraph_measure_dynamics_lastcit_st(const igraph_t *graph, 
+				       igraph_vector_t *res,
+				       const igraph_vector_t *al) {
+  
+  long int no_of_nodes=igraph_vcount(graph);
+  long int agebins=igraph_vector_size(al)-1;
+  long int binwidth=no_of_nodes/agebins+1;
+  long int *lastcit;
+
+  igraph_vector_t neis;
+
+  long int node, i, k;
+
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  lastcit=Calloc(no_of_nodes, long int);
+  if (!lastcit) {
+    IGRAPH_ERROR("Cannot measure dynamics (lastcit st)", IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_free, lastcit);
+  
+  igraph_vector_resize(res, no_of_nodes);
+  igraph_vector_null(res);
+  VECTOR(*res)[0]=VECTOR(*al)[agebins];	/* node without citation */
+  
+  for (node=1; node<no_of_nodes; node++) {
+    
+    IGRAPH_ALLOW_INTERRUPTION();
+    
+    /* new node, updates */
+    VECTOR(*res)[node]=VECTOR(*res)[node-1]+VECTOR(*al)[agebins];
+    for (k=1; node-binwidth*k+1 >= 1; k++) {
+      long int shnode=node-binwidth*k;
+      igraph_neighbors(graph, &neis, shnode, IGRAPH_OUT);
+      for (i=0; i<igraph_vector_size(&neis); i++) {
+	long int cnode=VECTOR(neis)[i];
+	if (lastcit[cnode]==shnode+1) {
+	  VECTOR(*res)[node] += -VECTOR(*al)[k-1]+VECTOR(*al)[k];
+	}
+      }
+    }
+    
+    /* inspect the outgoing edges */
+    igraph_neighbors(graph, &neis, node, IGRAPH_OUT);
+    for (i=0; i<igraph_vector_size(&neis); i++) {
+      long int to=VECTOR(neis)[i];
+      long int xidx=lastcit[to]!=0 ? (node-lastcit[to]+1)/binwidth : agebins;
+      
+      lastcit[to]=node+1;
+      
+      VECTOR(*res)[node] += -VECTOR(*al)[xidx]+VECTOR(*al)[0];
+    }
+  }
+  
+  igraph_free(lastcit);
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(2);
+
+  return 0;
+}
