@@ -1,3 +1,10 @@
+2007-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/games.R (lastcit.game) : added
+	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.lastcit) : added
+	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_lastcit)
+	(R_igraph_measure_dynamics_lastcit_st, R_igraph_lastcit_game) : added
+
 2007-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/measure.dynamics.R 
